# HTTP_1.1

./: CMakeLists.txt
Client/: CMakeLists.txt
Client/APP/: CMakeLists.txt  main.cpp
Client/APP/src/: GUI_Client.cpp  GUI_Client.h  window_history.cpp  window_history.h
Client/CORE/: CMakeLists.txt
Client/CORE/includes/Client/: client.h
Client/CORE/src/Client/: client.cpp
Server/APP/: CMakeLists.txt  main.cpp
Server/APP/src/: GUI_Client.cpp  GUI_Client.h  GUI_Server.cpp  GUI_Server.h
Server/APP/src/gui/: GUI_Server.cpp  GUI_Server.h  window_history.cpp  window_history.h
Server/CORE/: CMakeLists.txt
Server/CORE/includes/Server/: pinger.h  server.h
Server/CORE/src/Server/: pinger.cpp  server.cpp
Shared/: CMakeLists.txt
Shared/includes/Shared/: App.h  Delegates.h  EventsManager.h  IniManager.h  InterfaceDelegate.h  Interface_Gui.h  MainWindow.h  helpers.h  library.h  utils.h
Shared/libs/Shared/: inicpp.h
Shared/libs/Shared/imgui/: imconfig.h
Shared/src/Shared/: App.cpp  Delegate.cpp  EventsManager.cpp  IniManager.cpp  MainWindow.cpp  helpers.cpp  utils.cpp
